--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -50,4 +51,26 @@ code {
 }
 h1 {
   font-size: 20px;
+}
+.container-info .redes {
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  align-content:center;
+
+}
+.container-info .redes button{
+  margin: 10px;
+}
+nav a{
+  display: block;
+  text-decoration: none;
+  padding: 20px;
+  color: #fff;
+  border-left: 5px solid transparent;
+  transition: all 400ms ease;
+}
+nav a:hover {
+  border-left: 5px solid #c7c7c7;
+  background: #1f1f1f;
 }
