--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 body {
   margin: 0;
-  overflow: hidden;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -33,7 +33,7 @@ code {
 .container-lateral  {
   width: 90%;
   margin: auto;
-  overflow: hidden;
+  overflow: auto;
 }
 .container-info {
   display: flex;
@@ -92,6 +92,10 @@ nav a:hover {
   background: -webkit-linear-gradient(to right, #3A6073, #16222A);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #3A6073, #16222A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+h2{
+  color: #52BE80;
+  margin-bottom: 5px;
+}
 .home  h1{
   font-size: 5em;
 }
@@ -101,7 +105,33 @@ nav a:hover {
 .container{
   width: 90%;
   margin: auto;
+  padding-bottom: 5em;
 }
 .about{
   margin-top: 2em;
+}
+.about .textos{
+  margin-left: 2em;
+}
+a{
+    text-decoration: none;
+}
+.desarrolloWeb{
+  margin: 2em 0px;
+}
+.logotipos {
+  width: 100px;
+  height: 100px;
+  margin-right: 5em;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+.logos{
+  margin-top: 4em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
