--- a/src/index.css
+++ b/src/index.css
@@ -1,137 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,500;1,300&display=swap');
+
+:root {
+  --my-color-black: #212121;
+  --my-color-teal: #6D9886;
+  --my-color-beige: #D9CAB3;
+  --my-color-grey: #F6F6F6;
+}
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body {
-  margin: 0;
-
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--my-color-grey);
+  font-family: 'Roboto', sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 300px auto;
-  justify-items: stretch;
-  align-items: stretch;
-}
-.menu{
-  color: #fff;
-  height: 100vh;
-  background-color: black;
-}
-/* menu lateral */
-.container-lateral  {
-  width: 90%;
+.contenedor {
+  width: 100%;
+  max-width: 1000px;
   margin: auto;
-  overflow: auto;
-}
-.container-info {
-  display: flex;
-  flex-direction: column;
-  justify-content:center;
-  align-items: center;
-  align-content:center;
-  margin-top: 20px;
-}
-.imgRedonda {
-  width:150px;
-  height:150px;
-  border-radius:180px;
-  -webkit-border-radius:180px;
-  -moz-border-radius:180px;
-  -ms-border-radius:180px;
-  -o-border-radius:180px;
-}
-h1 {
-  font-size: 20px;
-}
-.container-info .redes {
-  display: flex;
-  justify-content:center;
-  align-items: center;
-  align-content:center;
-
-}
-.container-info .redes button{
-  margin: 10px;
-}
-nav a{
-  display: block;
-  text-decoration: none;
-  padding: 20px;
-  color: #fff;
-  border-left: 5px solid transparent;
-  transition: all 400ms ease;
-}
-nav a:hover {
-  border-left: 5px solid #c7c7c7;
-  background: #1f1f1f;
-}
-.page{
-  overflow: auto
-}
-.home{
-  display: flex;
-  color: #fff;
-  flex-direction: column;
-  justify-content:center;
-  align-items: center;
-  align-content:center;
-  height: 100%;
-  background: #16222A;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #3A6073, #16222A);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #3A6073, #16222A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-h2{
-  color: #52BE80;
-  margin-bottom: 5px;
-}
-.home  h1{
-  font-size: 5em;
-}
-.home  h4{
-  font-size: 2em;
-}
-.container{
-  width: 90%;
-  margin: auto;
-  padding-bottom: 5em;
-}
-.about{
-  margin-top: 2em;
-}
-.about .textos{
-  margin-left: 2em;
-}
-a{
-    text-decoration: none;
-}
-.desarrolloWeb{
-  margin: 2em 0px;
-}
-.logotipos {
-  width: 100px;
-  height: 100px;
-  margin-right: 5em;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-}
-.logos{
-  margin-top: 4em;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  overflow: hidden;
 }
