--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@ body {
   margin: auto;
   overflow: hidden;
 }
+
+.contenedor1 {
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  overflow: hidden;
+  padding: 60px 0;
+}
